# Windows-Optimizer

./: .gitignore  BUG_FIXES_DETAILED.md  CHANGELOG.md  CREATE_EXE.md  INSTALL.md  MIGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README-TAURI.md  README.md  Simple Psy-op Win-Op-Code.txt  Simple Psy-op Win-Op.html  build.bat  dev.bat  distribute.bat  index.html  main.js  package-lock.json  package-tauri.json  package.json  preload.js  run-admin.bat  run-exe.bat  start.bat  test-window.bat  windows11_optimizer_readme.md
src-tauri/: Cargo.toml
src-tauri/icons/: README.md
src-tauri/src/: bloatware.rs  file_manager.rs  lib.rs  registry.rs
