[package]
name = "windows-system-optimizer"
version = "2.0.0"
description = "A comprehensive Windows 11 system optimization tool"
authors = ["System Optimizer Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "shell-open", "dialog-open", "notification-all"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
walkdir = "2.4"
sha2 = "0.10"
md5 = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
zip = "0.6"
flate2 = "1.0"
winreg = "0.52"
windows = { version = "0.52", features = ["Win32_System_Registry", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]